no qc pass: p4lang: reflexive access list
qc pass: p4lang: ingress reflexive access list
qc pass: p4lang: egress reflexive access list
---------------------------------- 2022-02-09 05:11:48
no todo: punt ace mode to the dataplanes, use it for reflexive acls, consider for ip inspect usage
---------------------------------- 2022-02-09 11:29:32
todo: rtr-hw2.txt, hwsn knob
---------------------------------- 2022-02-09 19:44:39
qc pass: p4lang: interface inspection with egress drop
qc pass: p4lang: interface inspection with ingress drop
---------------------------------- 2022-02-09 20:22:55
no todo: rtr-hw2.txt, hwsn knob
---------------------------------- 2022-02-12 07:38:09
qc pass: p4lang: vlan interface inspection with egress drop
qc pass: p4lang: vlan interface inspection with ingress drop
---------------------------------- 2022-02-16 05:48:11
qc pass: interface inspection with member ingress drop
qc pass: interface inspection with member egress drop
---------------------------------- 2022-02-17 22:06:06
qc pass: mpolka over ethernet
qc pass: mpolka over ethernet vlan
qc pass: mpolka over ethernet bridge
qc pass: mpolka over hdlc
qc pass: mpolka over ppp
qc pass: mpolka over framerelay
qc pass: mpolka over atmdxi
qc pass: mpolka over gre
qc pass: mpolka over ethernet
qc pass: isis with mpolka
qc pass: lsrp with mpolka
qc pass: ospf with mpolka
---------------------------------- 2022-02-19 15:33:04
qc pass: sgt ethernet encapsulation
qc pass: sgt vlan encapsulation
qc pass: sgt bridge encapsulation
qc pass: sgt bundle encapsulation
qc pass: sgt hdlc encapsulation
qc pass: sgt ppp encapsulation
qc pass: sgt framerelay encapsulation
qc pass: sgt atmdxi encapsulation
qc pass: sgt isdn encapsulation
qc pass: sgt sep encapsulation
qc pass: sgt tunnel encapsulation
qc pass: interop1: sgt encapsulation
---------------------------------- 2022-02-19 17:34:29
qc pass: qos ingress sgt matcher
qc pass: qos egress sgt matcher