@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.2.19-cur, done by cs@nop.
--;-;-;2022-02-19 17:49:53, took 00:06:46, with 100 workers, on 2698 cases, 0 failed, 0 traces, 6 retries
+-;-;-;2022-02-19 18:16:00, took 00:06:53, with 100 workers, on 2700 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -511,6 +511,8 @@ http://sources.nop.hu/cfg/crypt-acl72.tst;crypt-acl72.tst;success;ingress flow m
 http://sources.nop.hu/cfg/crypt-acl73.tst;crypt-acl73.tst;success;egress flow matching hierarchical access list
 http://sources.nop.hu/cfg/crypt-acl74.tst;crypt-acl74.tst;success;ingress mask matching access list
 http://sources.nop.hu/cfg/crypt-acl75.tst;crypt-acl75.tst;success;egress mask matching access list
+http://sources.nop.hu/cfg/crypt-acl76.tst;crypt-acl76.tst;success;ingress sgt matching access list
+http://sources.nop.hu/cfg/crypt-acl77.tst;crypt-acl77.tst;success;egress sgt matching access list
 http://sources.nop.hu/cfg/crypt-dtls.tst;crypt-dtls.tst;success;dtls test
 http://sources.nop.hu/cfg/crypt-esp101.tst;crypt-esp101.tst;success;ipv4 in esp over ipv4
 http://sources.nop.hu/cfg/crypt-esp102.tst;crypt-esp102.tst;success;ipv4 in esp over ipv6
