@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.2.19-cur, done by cs@nop.<br/>
-tested: 2022-02-19 17:49:53, took 00:06:46, with 100 workers, on 2698 cases, 0 failed, 0 traces, 6 retries<br/>
+tested: 2022-02-19 18:16:00, took 00:06:53, with 100 workers, on 2700 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -524,6 +524,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-acl73.tst">crypt-acl73.tst</a></td><td>success</td><td>egress flow matching hierarchical access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-acl74.tst">crypt-acl74.tst</a></td><td>success</td><td>ingress mask matching access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-acl75.tst">crypt-acl75.tst</a></td><td>success</td><td>egress mask matching access list</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-acl76.tst">crypt-acl76.tst</a></td><td>success</td><td>ingress sgt matching access list</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-acl77.tst">crypt-acl77.tst</a></td><td>success</td><td>egress sgt matching access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-dtls.tst">crypt-dtls.tst</a></td><td>success</td><td>dtls test</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-esp101.tst">crypt-esp101.tst</a></td><td>success</td><td>ipv4 in esp over ipv4</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-esp102.tst">crypt-esp102.tst</a></td><td>success</td><td>ipv4 in esp over ipv6</td></tr>
